Code to merge tweets and df.summary

--- a/Spotify.ipynb
+++ b/Spotify.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "24fc8d2a",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "706e3a89",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        "['config.ini']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "65da0913",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "5a459dd1",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "000546d6",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<spotipy.client.Spotify object at 0x7f563e67edc0>\n"
+      "<spotipy.client.Spotify object at 0x000001FC50091550>\n"
      ]
     }
    ],
@@ -126,7 +126,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
+   "id": "ebde6155",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43msp\u001b[49m\u001b[38;5;241m.\u001b[39mplaylist_tracks(playlist_id, fields\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, limit\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, offset\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, market\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUS\u001b[39m\u001b[38;5;124m'\u001b[39m, additional_types\u001b[38;5;241m=\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrack\u001b[39m\u001b[38;5;124m'\u001b[39m, ))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sp' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sp.playlist_tracks(playlist_id, fields=None, limit=10, offset=0, market='US', additional_types=('track', ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "0165b061",
    "metadata": {},
    "outputs": [],
@@ -153,11 +175,25 @@
    "id": "82073cbc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "artist_name = []\n",
+    "track_name = []\n",
+    "track_popularity = []\n",
+    "artist_id = []\n",
+    "track_id = []\n",
+    "for i in range(0,1000,50):\n",
+    "    track_results = sp.playlist_tracks(playlist_id, fields=None, limit=10, offset=0, market='US', additional_types=('track', ))\n",
+    "    for i, t in enumerate(track_results['tracks']['items']):\n",
+    "        artist_name.append(t['artists'][0]['name'])\n",
+    "        artist_id.append(t['artists'][0]['id'])\n",
+    "        track_name.append(t['name'])\n",
+    "        track_id.append(t['id'])\n",
+    "        track_popularity.append(t['popularity'])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "5404b628",
    "metadata": {},
    "outputs": [
@@ -202,7 +238,7 @@
        "      <td>Nicky Youre</td>\n",
        "      <td>Sunroof</td>\n",
        "      <td>4h4QlmocP3IuwYEj2j14p8</td>\n",
-       "      <td>93</td>\n",
+       "      <td>92</td>\n",
        "      <td>7qmpXeNz2ojlMl2EEfkeLs</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -234,7 +270,7 @@
        "      <td>Drake</td>\n",
        "      <td>Wants and Needs (feat. Lil Baby)</td>\n",
        "      <td>65OVbaJR5O1RmwOQx0875b</td>\n",
-       "      <td>85</td>\n",
+       "      <td>84</td>\n",
        "      <td>3TVXtAsR1Inumwj472S9r4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -250,14 +286,14 @@
        "4            Drake             Wants and Needs (feat. Lil Baby)   \n",
        "\n",
        "                 track_id  track_popularity               artist_id  \n",
-       "0  4h4QlmocP3IuwYEj2j14p8                93  7qmpXeNz2ojlMl2EEfkeLs  \n",
+       "0  4h4QlmocP3IuwYEj2j14p8                92  7qmpXeNz2ojlMl2EEfkeLs  \n",
        "1  3cBsEDNhFI9E82vPj3kvi3                83  4oUHIQIBe0LHzYfvXNW4QM  \n",
        "2  2BcMwX1MPV6ZHP4tUT9uq6                85  3TVXtAsR1Inumwj472S9r4  \n",
        "3  0T5iIrXA4p5GsubkhuBIKV                90  5XKFrudbV4IiuE5WuTPRmT  \n",
-       "4  65OVbaJR5O1RmwOQx0875b                85  3TVXtAsR1Inumwj472S9r4  "
+       "4  65OVbaJR5O1RmwOQx0875b                84  3TVXtAsR1Inumwj472S9r4  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6d380a7e",
    "metadata": {},
    "outputs": [],
@@ -298,136 +334,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a86a5661",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>artist_name</th>\n",
-       "      <th>track_name</th>\n",
-       "      <th>track_id</th>\n",
-       "      <th>track_popularity</th>\n",
-       "      <th>artist_id</th>\n",
-       "      <th>artist_popularity</th>\n",
-       "      <th>artist_genres</th>\n",
-       "      <th>artist_followers</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Nicky Youre</td>\n",
-       "      <td>Sunroof</td>\n",
-       "      <td>4h4QlmocP3IuwYEj2j14p8</td>\n",
-       "      <td>93</td>\n",
-       "      <td>7qmpXeNz2ojlMl2EEfkeLs</td>\n",
-       "      <td>75</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>68919</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Morgan Wallen</td>\n",
-       "      <td>Wasted On You</td>\n",
-       "      <td>3cBsEDNhFI9E82vPj3kvi3</td>\n",
-       "      <td>83</td>\n",
-       "      <td>4oUHIQIBe0LHzYfvXNW4QM</td>\n",
-       "      <td>84</td>\n",
-       "      <td>[contemporary country, country]</td>\n",
-       "      <td>4111836</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Drake</td>\n",
-       "      <td>Knife Talk (with 21 Savage ft. Project Pat)</td>\n",
-       "      <td>2BcMwX1MPV6ZHP4tUT9uq6</td>\n",
-       "      <td>85</td>\n",
-       "      <td>3TVXtAsR1Inumwj472S9r4</td>\n",
-       "      <td>95</td>\n",
-       "      <td>[canadian hip hop, canadian pop, hip hop, rap,...</td>\n",
-       "      <td>67637927</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Stephen Sanchez</td>\n",
-       "      <td>Until I Found You</td>\n",
-       "      <td>0T5iIrXA4p5GsubkhuBIKV</td>\n",
-       "      <td>90</td>\n",
-       "      <td>5XKFrudbV4IiuE5WuTPRmT</td>\n",
-       "      <td>76</td>\n",
-       "      <td>[gen z singer-songwriter, pop]</td>\n",
-       "      <td>246503</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Drake</td>\n",
-       "      <td>Wants and Needs (feat. Lil Baby)</td>\n",
-       "      <td>65OVbaJR5O1RmwOQx0875b</td>\n",
-       "      <td>85</td>\n",
-       "      <td>3TVXtAsR1Inumwj472S9r4</td>\n",
-       "      <td>95</td>\n",
-       "      <td>[canadian hip hop, canadian pop, hip hop, rap,...</td>\n",
-       "      <td>67637927</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       artist_name                                   track_name  \\\n",
-       "0      Nicky Youre                                      Sunroof   \n",
-       "1    Morgan Wallen                                Wasted On You   \n",
-       "2            Drake  Knife Talk (with 21 Savage ft. Project Pat)   \n",
-       "3  Stephen Sanchez                            Until I Found You   \n",
-       "4            Drake             Wants and Needs (feat. Lil Baby)   \n",
-       "\n",
-       "                 track_id  track_popularity               artist_id  \\\n",
-       "0  4h4QlmocP3IuwYEj2j14p8                93  7qmpXeNz2ojlMl2EEfkeLs   \n",
-       "1  3cBsEDNhFI9E82vPj3kvi3                83  4oUHIQIBe0LHzYfvXNW4QM   \n",
-       "2  2BcMwX1MPV6ZHP4tUT9uq6                85  3TVXtAsR1Inumwj472S9r4   \n",
-       "3  0T5iIrXA4p5GsubkhuBIKV                90  5XKFrudbV4IiuE5WuTPRmT   \n",
-       "4  65OVbaJR5O1RmwOQx0875b                85  3TVXtAsR1Inumwj472S9r4   \n",
-       "\n",
-       "   artist_popularity                                      artist_genres  \\\n",
-       "0                 75                                                 []   \n",
-       "1                 84                    [contemporary country, country]   \n",
-       "2                 95  [canadian hip hop, canadian pop, hip hop, rap,...   \n",
-       "3                 76                     [gen z singer-songwriter, pop]   \n",
-       "4                 95  [canadian hip hop, canadian pop, hip hop, rap,...   \n",
-       "\n",
-       "   artist_followers  \n",
-       "0             68919  \n",
-       "1           4111836  \n",
-       "2          67637927  \n",
-       "3            246503  \n",
-       "4          67637927  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "track_df = track_df.assign(artist_popularity=artist_popularity, artist_genres=artist_genres, artist_followers=artist_followers)\n",
@@ -495,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
