--- a/Assignment_Spotify_Twitter_Group_A.ipynb
+++ b/Assignment_Spotify_Twitter_Group_A.ipynb
@@ -5,7 +5,7 @@
    "id": "b5f3541d",
    "metadata": {},
    "source": [
-    "![Cover](Copy%20of%20MDA%20II%20Final%20Presentation.png)"
+    "![Cover](Cover.png)"
    ]
   },
   {
