--- a/Assignment_Spotify_Twitter_Group_A.ipynb
+++ b/Assignment_Spotify_Twitter_Group_A.ipynb
@@ -37,6 +37,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "18eb4390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['PYSPARK_SUBMIT_ARGS'] =  '--jars /usr/share/java/mariadb-java-client.jar pyspark-shell'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "3af8ccc2",
    "metadata": {},
@@ -2208,50 +2219,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "942cbfb5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found on Cluster 3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 1109:>                                                       (0 + 1) / 1]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lovely - Listen @ https://open.spotify.com/track/0u2P5u6lvoDfwTYjAADbn4 - Popularity 79693.9\n",
-      "When The Partys Over - Listen @ https://open.spotify.com/track/43zdsphuZLzwA9k4DJhU0I - Popularity 57236.95\n",
-      "When The Partys Over - Listen @ https://open.spotify.com/track/14JzyD6FlBD5z0wV5P07YI - Popularity 26340.3\n",
-      "I Love You - Listen @ https://open.spotify.com/track/6CcJMwBtXByIz4zQLzFkKc - Popularity 18010.15\n",
-      "Its Beginning To Look A Lot Like Christmas - Listen @ https://open.spotify.com/track/0lLdorYw7lVrJydTINhWdI - Popularity 13829.1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
-   "source": [
-    "# Put a Track Name here to get Suggestion.\n",
-    "print_similar_songs(\"All of Me\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "8d3c4754",
    "metadata": {},
@@ -4226,7 +4193,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -4240,7 +4207,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "62364ad31170e8bd4dc2c84ded94673f0b78600cae41b254993f9792db5f3145"
+   }
   }
  },
  "nbformat": 4,
